<resources>
    <string name="app_name">FinanceSmart</string>
    <string name="startAppButtonText">Continue</string>
    <string name="take_home">Enter your monthly take home</string>
    <string name="Title">Taking the reigns on your personal finance</string>
    <string name="Description">The key to sound financial footing in life begins with knowing where your money is coming from and where it is going and the best way to begin this
    is with budgeting. This not only involves attempting to minimise outgoings the best you can but also with figuring out your goals and what the best strategy is going forward
    to reach those. This app is designed to help you help you realise your spending and gain knowledge on how moving forward your money may better be put to work for you.</string>
    <string name="takehomeTitle">Earn more, Spend less</string>
    <string name="takehomeDescription">Key to a strong financial situation is education about finance. Knowing your sources of income, where your expenses are and where the rest
        is being saved or invested. So really we could simplify personal finance down to just 3 steps. Earn more, spend less, invest the rest. Easy right\? Unfortunately it\'s not
        quite that simple or easy. Hence why we\'re starting here and seeing what steps we can take almost instantly to reduce unnecessary bills and put our money to work for us.
        To begin, let\'s start with your monthly take home, so after tax and national insurance is deducted and we\'ll see how we can improve!</string>
    <string name="takehomeEnter">Enter</string>
    <string name="takehomeHint">Monthly take home</string>
    <string name="emergencyfundTitle">Forecasting a rainy day</string>
    <string name="emergencyfundDescription">No one likes to think about it but sometimes things don\'t go in our favour. In the UK around 26%% people have savings of less than £1,000. Take a moment to think about how long this would last you if from tomorrow your income disappeared. An emergency fund aims to reduce this worry by keeping an accessible sum of money aside that you don\'t touch unless something unexpected happens which catches you off guard. This should be set aside and not as a pot to dip into, instead only for genuine emergencies. The optimal emergency fund can be anywhere from 6 months outgoings to 12 months depending on your risk appetite
    and this gives you that extra piece of mind so you don\'t need to worry. Also your first priority once your back on your feet is to replenish its value. Look after your emergency fund so it can look after you!</string>
    <string name="emergencyfundHint">Emergency fund saved</string>
    <string name="emergencyfundEnter">Enter</string>
    <string name="outgoingsTitle">Where did that paycheck go?</string>
    <string name="outgoingsDescription">Financially it is alway\'s logical to minimise your outgoings. Whilst eliminating or reducing housing costs, utilities and the basics is much easier said than done a good place to begin is with \'entertainment\' costs. Don\'t worry! We\'re not saying stop doing all the things you enjoy or cut out socialising but getting creating a picture of where your income is being spent is vital to identifying areas where you may be overspending and could pull the reigns on to save some money aside for other longer term goals. Here you can enter your average monthly outgoings and we can crunch the numbers.</string>
    <string name="outgoingsHint">Monthly outgoings</string>
    <string name="highInterestDebtTitle">Money drains</string>
    <string name="highInterestDebtDescription">Before anyone can think about long term saving and investing its best to remove any short term leaks and get debts paid off. enter below if you have any high interest debt (>4%) excluding student loans. We will look at repayment methods later if necessary.</string>
    <string name="highInterestDebtButton">Continue</string>
    <string name="highInterestDebtSwitchNo">No</string>
    <string name="highInterestDebSwitchYes">Yes</string>
    <string name="HighInterestDebt">High Interest Debt</string>
    <string name="pensionSchemeTitle">Thinking of the future</string>
    <string name="pensionSchemeDescription">For many people retirement feels like another lifetime away but it is never too early to consider your future self. You should ensure your are enrolled in your employer\'s automatic enrolment pension scheme. This is a minimum of 3%% extra pay in exchange for you contributing 4%% of your take-home pay. Enter below if you know your enrolled in such a scheme.</string>
    <string name="pensionSchemeToggle">Pension scheme contribution</string>
    <string name="pensionSchemeToggleYes">Yes</string>
    <string name="pensionSchemeToggleNo">No</string>
    <string name="pensionSchemeButton">Continue</string>
    <string name="firstHomeTitle">Flying the nest</string>
    <string name="firstHomeDescription">Purchasing a house is often the top priority for many people and likely to be the biggest purchase they will make in their lives. Saving for a deposit and any relevant fees can depend on time frames and cost so it can be reassuring to know you are saving in the most effective way possible for the future. Enter below if you are saving currently for your first home along with the time frame in which you intend to purchase.</string>
    <string name="firstHomeSwitchYes">Yes</string>
    <string name="firstHomeSwitchNo">No</string>
    <string name="firstHomeSwitch">Saving for your first Home?</string>
    <string name="firstHomeInput">Years until purchase</string>
    <string name="firstHomeButton">Continue</string>
    <string name="highInterestDebtName">Debt name</string>
    <string name="highInterestDebtMin">Min payment</string>
    <string name="highInterestDebtRate">%</string>
    <string name="highInterestDebtAmount">Amount to pay</string>
    <string name="addDebtButton">Add</string>
    <string name="delDebtButton">X</string>
    <string name="shortTermTitle">Setting up goals</string>
    <string name="shortTermDescription">Having something to work towards is key for motivation to save and in showing yourself that you can be financially responsible. Enter below if you have any short term goals ( less than 5 years and excluding buying your first home).</string>
    <string name="shortTermToggle">Short term goals?</string>
    <string name="shortTermContinue">Continue</string>
    <string name="shortTermToggleYes">Yes</string>
    <string name="shortTermToggleNo">No</string>
    <string name="longTermTitle">Thinking further ahead</string>
    <string name="longTermDescription">As we mentioned earlier about setting up your workplace pensions and ensuring maximum contributions, Thinking of the future is absolutely vital to not only look after your future self but give your current self piece of mind and reassurance. Enter below if you have any longer terms goals and whether these occur before or after you reach retirement account so we can find the best options.</string>
    <string name="longTermSwitch">Long term goals? (More than 5 years)</string>
    <string name="longTermSwitchAge">After retirement age? (~58)</string>
    <string name="longTermContinue">Continue</string>
    <string name="title_activity_summary">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="takeHomeSummaryTitle">Your monthly take home</string>
    <string name="outgoingsSummaryTitle">Your monthly outgoings</string>
    <string name="emergencyFundSummaryTitle">That rainy day fund</string>
    <string name="outgoingsSummaryDescriptionNegative">Your monthly expenses are %d%% of what you take home. This is higher than ideal so we should look at where your spending is going and try to bring it below 50%% if we can!</string>
    <string name="outgoingsSummaryDescriptionPositive">Your monthly expenses are %d%% of what you take home. We\'re on track so far and your spending is not out of control!</string>
    <string name="emergencyFundReached">Well done! you\'ve achieved your target of £%1$d (6 months outgoings). Now keep this set aside in an account you can easily access quickly and has a good interest rate to earn a return on this. </string>
    <string name="emergencyFundLacking">Your target of £%1$d has not quite been reached yet. Try and set some more aside each month if you can to build this up closer to the target of 6 months outgoings.</string>
    <string name="takeHomeSummary">£%1$d</string>
    <string name="outgoingsSummary">£%1$d</string>
    <string name="pensionSummaryTitle">Pension Contributions</string>
    <string name="pensionSummaryGood">You stated that you apply the maximum contribution to your workplace pension including matched contributions. This is great news and is sure you set you up well for the future should you continue.</string>
    <string name="pensionSummaryBad">You\'ve stated you dont yet give your maximum contribution or are unsure. Make it your mission to find out what your employer offers and look into getting the benefits of this scheme!</string>
    <string name="debtSummaryTitle">Draining debts</string>
    <string name="debtSummaryButton">Get advice</string>
    <string name="firstHomeSummaryTitle">Joining the property ladder</string>
    <string name="debtsPresentSummary">It looks like you have some higher interest debts that could do with wiping out to restore some of your monthly income. Click the get advice button below to find out how to tackle these debts best.</string>
    <string name="debtsAbsentSummary">You didn\'t enter any high interest debts previously. Thats great and we should aim to keep it this way if we can due to their potential drain on incomes</string>
    <string name="noFirstHome">You don\'t need to worry about this section!</string>
    <string name="longTermFirstHome">You\'ve entered that it will be around %d years until you purchase your first home. This is fairly long term and that money otherwise set in a savings or current account could be gaining more value. Consider a LISA for a 25%% bonus on up to £4000 a year and the rest could go placed into an index fund.</string>
    <string name="shortTermFirstHome">%d years isn\'t long term enough to be considering higher risk methods of gaining value. Aim to keep your deposit in a savings account with a respectable interest rate until you need the cash. You can still benefit from a LISA too if you aren\'t already!</string>
    <string name="debtAdviceTitle">Repayments</string>
    <string name="debtAdviceDescription">Generally there is two common routes to paying down any debts you may have and these depend on what matters to you most. Repaying debts as fast as possible or beginning small and being able to see each debt gradually wiped off from your accounts. In both cases its vital to make the minimum payments but the strategies just alter slightly.</string>
    <string name="avalancheTitle">Method 1: Debt avalanche</string>
    <string name="snowballTitle">Method 2: Debt snowball</string>
    <string name="avalancheDescription">The avalanche repayment method puts attention on the most expensive debts first. The way this method works is by identifying that most costly debt (largest monthly repayment) and after spending the minimum on any other debts, using everything spare to pay as much as possible to this debt. Over time this should quickly wipe out your largest debt after which you can focus that new extra cash elsewhere or towards the next debt that will be wiped out even quicker! \\n Lets see how this would work in your case. From the numbers, you have %1$d left over from your take home after outgoings are deducted. After paying all the minimums on your debts this leaves you with %2$d left over. If possible use all this as extra repayment on %3$s.</string>
</resources>