<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstHome">

    <TextView
        android:id="@+id/firstHomeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Primary"
        android:fontFamily="@font/alegreya_black"
        android:gravity="center_horizontal"
        android:paddingLeft="25dp"
        android:paddingTop="16dp"
        android:paddingRight="25dp"
        android:paddingBottom="10dp"
        android:text="@string/firstHomeTitle"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstHomeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/firstHomeDescription"
        android:textColor="@color/OnBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstHomeTitle" />

    <Switch
        android:id="@+id/firstHomeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/firstHomeSwitch"
        android:textColor="@color/PrimaryDark"
        android:textOff="@string/firstHomeSwitchNo"
        android:textOn="@string/firstHomeSwitchYes"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstHomeDescription" />

    <EditText
        android:id="@+id/firstHomeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/firstHomeInput"
        android:inputType="textPersonName"
        android:textColorHint="@color/PrimaryDark"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstHomeSwitch" />

    <Button
        android:id="@+id/firstHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="submitFirstHome"
        android:text="@string/firstHomeButton"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/PrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>