<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PensionScheme">

    <TextView
        android:id="@+id/pensionSchemeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Primary"
        android:fontFamily="@font/alegreya_black"
        android:gravity="center_horizontal"
        android:paddingLeft="25dp"
        android:paddingTop="16dp"
        android:paddingRight="25dp"
        android:paddingBottom="10dp"
        android:text="@string/pensionSchemeTitle"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pensionSchemeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/pensionSchemeDescription"
        android:textColor="@color/OnBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pensionSchemeTitle" />

    <ToggleButton
        android:id="@+id/pensionSchemeToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/PrimaryDark"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/pensionSchemeToggle"
        android:textColor="#FFFFFF"
        android:textOff="@string/pensionSchemeToggleNo"
        android:textOn="@string/pensionSchemeToggleYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pensionSchemeDescription" />

    <Button
        android:id="@+id/pensionSchemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/PrimaryDark"
        android:onClick="submitPensionScheme"
        android:text="@string/pensionSchemeButton"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>