<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighInterestDebt">

    <TextView
        android:id="@+id/highInterestDebtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Primary"
        android:fontFamily="@font/alegreya_black"
        android:gravity="center_horizontal"
        android:paddingLeft="25dp"
        android:paddingTop="16dp"
        android:paddingRight="25dp"
        android:paddingBottom="10dp"
        android:text="@string/highInterestDebtTitle"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/highInterestDebtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/highInterestDebtDescription"
        android:textColor="@color/OnBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highInterestDebtTitle" />

    <Button
        android:id="@+id/highInterestDebtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="submitHighInterestDebt"
        android:text="@string/highInterestDebtButton"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/PrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/highInterestDebtSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/HighInterestDebt"
        android:textColor="@color/PrimaryDark"
        android:textOff="@string/highInterestDebtSwitchNo"
        android:textOn="@string/highInterestDebSwitchYes"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highInterestDebtDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/highInterestDebt0"
        android:layout_width="401dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/debtList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highInterestDebtSwitch">

        <EditText
            android:id="@+id/highInterestDebtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/highInterestDebtName"
            android:inputType="textPersonName"
            android:textColorHint="@color/PrimaryDark"
            app:layout_constraintEnd_toStartOf="@+id/highInterestDebtAmount"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/highInterestDebtAmount"
            android:layout_width="137dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/highInterestDebtAmount"
            android:inputType="textPersonName"
            android:textColorHint="@color/PrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/highInterestDebtMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/highInterestDebtMin"
            android:inputType="textPersonName"
            android:textColorHint="@color/PrimaryDark"
            android:textColorLink="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/highInterestDebtRate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highInterestDebtName" />

        <EditText
            android:id="@+id/highInterestDebtRate"
            android:layout_width="79dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/highInterestDebtRate"
            android:inputType="textPersonName"
            android:textColorHint="@color/PrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highInterestDebtAmount" />

        <Button
            android:id="@+id/addDebtButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="addDebt"
            android:text="@string/addDebtButton"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/PrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highInterestDebtMin" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/debtList"
        android:layout_width="401dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/highInterestDebtButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>