<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LongTermGoals">

    <TextView
        android:id="@+id/longTermTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Primary"
        android:fontFamily="@font/alegreya_black"
        android:gravity="center_horizontal"
        android:paddingLeft="25dp"
        android:paddingTop="16dp"
        android:paddingRight="25dp"
        android:paddingBottom="10dp"
        android:text="@string/longTermTitle"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/longTermDescription"
        android:layout_width="343dp"
        android:layout_height="221dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/longTermDescription"
        android:textColor="@color/OnBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longTermTitle" />

    <Switch
        android:id="@+id/longTermSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/longTermSwitch"
        android:textColor="@color/PrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longTermDescription" />

    <Switch
        android:id="@+id/longTermSwitchAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/longTermSwitchAge"
        android:textColor="@color/PrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longTermSwitch" />

    <Button
        android:id="@+id/longTermButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="submitLongTerm"
        android:text="@string/longTermContinue"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/PrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>